[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shahab2015", email = "166250566+shahab2015@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.17",
]

[project.scripts]
hello-agent = "hello_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
